--- a/src/styles/cards.css
+++ b/src/styles/cards.css
@@ -1,13 +1,31 @@
 .card {
-    height: 200px;
+    min-height: 200px;
     width: 140px;
     margin: 20px;
     border-radius: 8px;
     padding: 12px;
     box-shadow: 2px 2px 3px #aaa;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+.card img {
+    height: 30px;
 }
 
 .card__text {
     font-family: 'Poppins', sans-serif;
     font-size: 14px;
+    
+ }
+
+ .black {
+    background-color: #000;
+ }
+
+ .black p {
+    color: #f44
  }
